--- a/MScIT_TeamProject_TemplateProject/resources/assets/styling/style.css
+++ b/MScIT_TeamProject_TemplateProject/resources/assets/styling/style.css
@@ -409,7 +409,7 @@ animation-name: fadeIn;
 .card1 {
 position: relative;
 width: 30%;
-max-width: 400px;
+/* max-width: 400px; */
 }
 
 .card1 .img_hero {
